--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css" rel="stylesheet">
 </head>
 <body>
-    <div id="navBar">
-        navbar
+    <div id="navBar" class="flexRow spaceBetween alignCenter">
+        <div class="flexRow">
+            <!-- TO INSERT THE ICON FROM LINKED W -->
+            <i class="mdi-food-fork-drink"></i>
+            <h3 style="margin: 0;">Seda's Cafe</h3>
+        </div>
+        <div class="flexRow">
+            <span id="about">About</span>
+            <span id="contact">Contact</span>
+        </div>
     </div>
-    <div class="flexRow"
-         <div id="sidebar">
-         sidebar
+    <div class="flexRow" style="height: calc(100% - var(--navBarHeight));">
+         <div id="sidebar" class="flexColumn">
+            <span>Breakfast</span> 
+            <span>Lunch</span>
+            <span>Dinner</span>
         </div>
         <div id="main">
-        main
+            main
         </div>
     </div>
 </body>
